[package]
name = "ddtri"
version = "0.2.1"
edition = "2021"
authors = ["Garbaz <garbaz@t-online.de>"]
description = "Distance Difference Triangulation"
categories = ["algorithms"]
keywords = ["triangulation", "positioning"]
homepage = "https://github.com/Garbaz/ddtri"
repository = "https://github.com/Garbaz/ddtri"
license = "MIT"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
rand = "0.8.5"
