[package]
name = "distance_difference_triangulation"
version = "0.3.1"
edition = "2021"
authors = ["Garbaz <garbaz@t-online.de>"]
description = "Position triangulation from differences of distances"
categories = ["algorithms"]
keywords = ["triangulation", "positioning"]
homepage = "https://github.com/Garbaz/distance_difference_triangulation"
repository = "https://github.com/Garbaz/distance_difference_triangulation"
license = "MIT"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
rand = "0.8.5"
